app/assets/stylesheets/frontend/registration.css.scss
@import "common";

body.registration {
  .content-main {
    @include col(13); @include last;
    position: relative;
  }

  h2 {
    @include prepend(4);
} }

#form_container { padding-top: 20px; }
#cam-modal {
  display: none;

  #cam-embed-wrapper {
    position: relative;
    margin: 0.5em 0;
  }

  #cam-preview, #cam-mask {
    position: absolute;
    top: 0; left: 0;
    display: none;
  }

  input, p {
    margin: 0.5em auto;
    text-align: center;
} }

form.formtastic {
  .disclaimer {
    color:#666;
    font-size: 11px; line-height: 16px;
    width: 450px;
    margin-top: 0.75em;
  }

  #member_sex_input {
    li {
      float: left;
      padding-right: 20px;
  } }

  #member_home_postal_code, #member_studenthome_postal_code {
    width: 14%;
    float: left;
  }
  #member_home_city, #member_studenthome_city{
    width: 37%;
    float: left;
    margin-left: 3px;
  }
  #member_home_postal_code_input, #member_studenthome_postal_code_input {
    .inline-errors {
      display: none;
  } }

  .study-field-other {
    display: none;
    position: absolute; right: 70px; top: 0;
    @include leader(0.5);

    input {
      margin: 3px 0;
} } }

.eid-wrapper {
  padding: 5px 15px; margin-bottom: 15px;
  border: 2px solid #E1E1E1;
  background: #fff;
}

.crop-wrapper {
  @include col(19); @include last;
  padding: 5px 15px; margin-bottom: 15px;
  border: 2px solid #E1E1E1;
  background: #fff;
  @include clearfix;

  h3 {
    @include leader(0.5, 15px);
    @include trailer(0.5, 15px);
    border: none;
  }

  .jcrop-holder {
    float: left;
  }

  .input_action {
    margin: 10px 0 6px 0;
  }

  span {
    float: right; width: 214px;
    margin: -23px 0 2px 0;
  }

  #crop-preview {
    float: right;
    width: 210px; height: 300px;
    overflow: hidden;
    border: 2px solid #333;
  }

  .inputs {
    clear: both;
  }
}

